# Algorithm

./: .gitignore  Makefile.am  algorithm  bubble_sort.c  configure.ac
src/: main.c
src/sort/: bubble_sort.c  bubble_sort.h
